--- a/css/achitect.css
+++ b/css/achitect.css
@@ -1,4 +1,52 @@
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700;800&display=swap');
+/* Share styles */
 *{
     font-family: 'Work Sans', sans-serif;
+}
+.btn-primary{
+    
+}
+/* Header styles */
+header{
+    background: rgba(255, 144, 14, 0.10);
+    padding: 50px 240px;
+}
+nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.nav-title{
+   font-size: 3rem;
+   color:  var(--Dark-01, #131313);
+   font-weight: 700;
+}
+nav > ul{
+    display: flex;
+}
+nav li{
+   list-style: none;
+   margin-right: 30px;
+   font-weight: 500;
+   font-size: 1rem;
+}
+nav li a{
+    text-decoration: none;
+    color: var(--Dark-02, #424242);
+}
+/* banner style */
+.banner-content{
+    max-width: 800px;
+    text-align: center;
+    margin: 0 auto;
+}
+.banner-title{
+   font-size: 4rem;
+   color: var(--Dark-01, #131313);
+   font-weight: 700;
+   line-height: normal;
+}
+.banner-discription{
+    color: var(--Dark-03, #727272);
+
 }
