--- a/css/achitect.css
+++ b/css/achitect.css
@@ -4,7 +4,15 @@
     font-family: 'Work Sans', sans-serif;
 }
 .btn-primary{
-    
+    border-radius: 8px;
+    color: #fff;
+    font-size: 1.25rem;
+    background: #ff900e;
+    padding: 20px 25px ;
+    font-weight: 600;
+    cursor: pointer;
+    border: 0;
+
 }
 /* Header styles */
 header{
@@ -49,4 +57,27 @@ nav li a{
 .banner-discription{
     color: var(--Dark-03, #727272);
 
+}
+.banner img{
+    margin-top: 20px;
+    width: 100%;
+}
+/* responsive media queries */
+/* Mobile devices */
+@media screen and (max-width:576px){
+    header{
+        padding: 20px;
+    }
+    nav {
+        flex-direction: column;
+    }
+}
+/* Tblet or medium devices */
+@media screen and (min-width:576px) and(max-width:960px){
+    header{
+        padding: 50px;
+    }
+    nav {
+        flex-direction: column;
+    }
 }
