--- a/css/achitect.css
+++ b/css/achitect.css
@@ -62,6 +62,61 @@ nav li a{
     margin-top: 20px;
     width: 100%;
 }
+/* Main stayles */
+main{
+    max-width: 1440px;
+    margin: 0 auto;
+}
+/* Teams styles */
+.teams-container{
+    display: flex;
+    align-items: center;
+}
+.teams-img-container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1,5rem;
+}
+.teams-content{
+    padding-right: 70px;
+    padding-left: 70px;
+}
+.teams-title{
+    font-size: 2.8rem;  
+}
+.teams-title .Quick-list{
+    color: #727272;
+    font-weight: 500;   
+}
+.teams-title .text-features{
+    color: #ff900e;
+    font-weight: 700px;
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* responsive media queries */
 /* Mobile devices */
 @media screen and (max-width:576px){
