--- a/css/achitect.css
+++ b/css/achitect.css
@@ -3,6 +3,9 @@
 *{
     font-family: 'Work Sans', sans-serif;
 }
+.text-light-gray{
+    color: #727272;
+}
 .btn-primary{
     border-radius: 8px;
     color: #fff;
@@ -54,10 +57,7 @@ nav li a{
    font-weight: 700;
    line-height: normal;
 }
-.banner-discription{
-    color: var(--Dark-03, #727272);
 
-}
 .banner img{
     margin-top: 20px;
     width: 100%;
@@ -65,7 +65,7 @@ nav li a{
 /* Main stayles */
 main{
     max-width: 1440px;
-    margin: 0 auto;
+    margin: 70px auto;
 }
 /* Teams styles */
 .teams-container{
@@ -75,7 +75,7 @@ main{
 .teams-img-container{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 1,5rem;
+    gap: 1.5rem;
 }
 .teams-content{
     padding-right: 70px;
@@ -84,8 +84,7 @@ main{
 .teams-title{
     font-size: 2.8rem;  
 }
-.teams-title .Quick-list{
-    color: #727272;
+.teams-title .Quick-list{ 
     font-weight: 500;   
 }
 .teams-title .text-features{
@@ -123,8 +122,17 @@ main{
     header{
         padding: 20px;
     }
-    nav {
+    nav,
+    .teams-container 
+    {
         flex-direction: column;
+    }
+    .teams-img-container{
+        grid-template-columns: 1fr;
+    }
+    .teams-content{
+        padding-left: 20px;
+        padding-right: 20px;
     }
 }
 /* Tblet or medium devices */
@@ -132,7 +140,8 @@ main{
     header{
         padding: 50px;
     }
-    nav {
+    nav,   .teams-container {
         flex-direction: column;
     }
+    
 }
