--- a/css/achitect.css
+++ b/css/achitect.css
@@ -15,8 +15,12 @@
     font-weight: 600;
     cursor: pointer;
     border: 0;
-
 }
+.section-title{
+    font-size: 3rem;
+    color:  ( #131313);
+    font-weight: 700;
+ }
 /* Header styles */
 header{
     background: rgba(255, 144, 14, 0.10);
@@ -27,11 +31,7 @@ nav{
     justify-content: space-between;
     align-items: center;
 }
-.nav-title{
-   font-size: 3rem;
-   color:  var(--Dark-01, #131313);
-   font-weight: 700;
-}
+
 nav > ul{
     display: flex;
 }
@@ -90,30 +90,44 @@ main{
 .teams-title .text-features{
     color: #ff900e;
     font-weight: 700px;
-
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+/* facts section */
+.facts-card-container{
+    display: flex;
+    justify-content: space-around;
+}
+.facts-card-container .card{
+   border-radius: 8px;
+   border: 1px solid #ff900e;
+   text-align: center;
+   padding:30px;
+  
+}
+.facts-card-container .card-title{
+    font-weight: 600;
+    font-size: 1.25rem;
+    margin-top: 5px;
+}
+.facts-card-container .card-stats{
+   font-size: 2.8rem;
+   color: #424242;
+   margin-top: 10px;
+   margin-bottom: 10px;
+}
+/* sponsors styles*/
+.sponsors{
+    text-align: center;
+}
+.sponsors-img-container{
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 40px;
+}
+.sponsors-img-container img{
+    width: 165px;
+}
 
 
 /* responsive media queries */
@@ -123,16 +137,21 @@ main{
         padding: 20px;
     }
     nav,
-    .teams-container 
+    .teams-container,
+    .facts-card-container,
+    .sponsors-img-container
     {
         flex-direction: column;
     }
     .teams-img-container{
         grid-template-columns: 1fr;
     }
-    .teams-content{
+    .teams-content, .facts-card-container{
         padding-left: 20px;
         padding-right: 20px;
+    }
+    .facts-card-container{
+       gap: 20px;
     }
 }
 /* Tblet or medium devices */
@@ -140,7 +159,9 @@ main{
     header{
         padding: 50px;
     }
-    nav,   .teams-container {
+    nav,   .teams-container,
+    .sponsors-img-container
+     {
         flex-direction: column;
     }
     
