--- a/css/achitect.css
+++ b/css/achitect.css
@@ -91,6 +91,46 @@ main{
     color: #ff900e;
     font-weight: 700px;
 }
+/* features section styles */
+.features{
+    margin-top: 130px;
+    display: flex;
+    gap: 140px;
+}
+.features .section-title{
+    border-left: 5px solid #ff900e;
+    padding-left: 20px;
+}
+.features-content .card{
+    padding: 30px;
+    margin-bottom: 40px;
+    border-radius: 8px;
+    background: #FFF;
+    box-shadow: 0px 4px 30px 0px rgba(0,0,0,0.06);
+}
+.features-img img{
+    height: 90%;
+    margin-left: 150px;
+}
+.ten-years-badge{
+    border-radius: 8px;
+    background: #ff900e;
+    color: white;
+    width: 342px;
+    padding: 40px;
+    text-align: center;
+    position: relative;
+    bottom: 100px;
+}
+.ten-years-badge h2{
+    font-size: 4rem;
+    margin: 0;
+}
+.ten-years-badge p{
+    font-size: 1.5rem;
+
+}
+
 /* facts section */
 .facts-card-container{
     display: flex;
@@ -138,10 +178,19 @@ main{
     }
     nav,
     .teams-container,
+    .features,
     .facts-card-container,
     .sponsors-img-container
     {
         flex-direction: column;
+    }
+    .features-img img{
+        width: 90%;
+        margin-left: 0;
+    }
+    .ten-years-badge{
+        position: static;
+        max-width: 300px;
     }
     .teams-img-container{
         grid-template-columns: 1fr;
@@ -159,7 +208,9 @@ main{
     header{
         padding: 50px;
     }
-    nav,   .teams-container,
+    nav,
+    .features,
+    .teams-container,
     .sponsors-img-container
      {
         flex-direction: column;
