--- a/css/style.css
+++ b/css/style.css
@@ -169,6 +169,21 @@ main{
     width: 165px;
 }
 
+/* Footer Style */
+.footer-color{
+    padding-top:35px;
+    background-color: rgba(255, 144, 14, 0.1);
+    text-align: center;
+    font-size: 20px;
+    margin-left: 100px;
+    margin-right: 100px;
+    height: 50px;
+}
+footer{
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
+
 
 /* responsive media queries */
 /* Mobile devices */
